--- a/client/views/superchat.ejs
+++ b/client/views/superchat.ejs
@@ -1,13 +1,12 @@
 <html>
     <head>
+        <title>super-chat page</title>
         <script src = "/socket.io/socket.io.js"></script>
         <script>
-            var socket = io('http://localhost:3000');
-            </script>
+        var socket = io('http://localhost:3000');
+        </script>
     </head>
-    
-    
     <body>
-      this is simple websiteck
+       hello world 
     </body>
 </html>
